--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,14 @@
 
 <body>
     <h1>blubb</h1>
-
+    <div id="main-chat">
+        <div id="chat-window">
+            <div id="output"></div>
+        </div>
+        <input id="handle" type="text" placeholder="handle">
+        <input id="message" type="text" placeholder="message">
+        <button id="send">send</button>
+    </div>
     <script src="./chat.js"></script>
 </body>
 
