--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    <h1>blubb</h1>
+    <h1>Ihr kleinen Kleinen</h1>
     <div id="main-chat">
         <div id="chat-window">
             <div id="output"></div>
         </div>
-        <input id="handle" type="text" placeholder="handle">
+        <input id="handle" type="text" placeholder="addy">
         <input id="message" type="text" placeholder="message">
         <button id="send">send</button>
     </div>
