--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,12 @@
         <div id="chat-window">
             <div id="output"></div>
         </div>
-        <input id="handle" type="text" placeholder="addy">
-        <input id="message" type="text" placeholder="message">
-        <button id="send">send</button>
+        <div id="form-container">
+            <input id="handle" type="text" placeholder="your name">
+            <input id="message" type="text" placeholder="message">
+            <button id="send">send</button>
+
+        </div>
     </div>
     <script src="./chat.js"></script>
 </body>
