--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,14 @@
     <div id="main-chat">
         <div id="chat-window">
             <div id="output"></div>
+            <div id="feedback"></div>
         </div>
         <div id="form-container">
-            <input id="handle" type="text" placeholder="your name">
-            <input id="message" type="text" placeholder="message">
-            <button id="send">send</button>
-
+            <form action="">
+                <input id="handle" type="text" placeholder="your name">
+                <input id="message" type="text" placeholder="message">
+                <input type="submit" id="send">
+            </form>
         </div>
     </div>
     <script src="./chat.js"></script>
